<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".conversionOptions"
    android:background="@drawable/img4">

    <TextView
        android:id="@+id/PageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="71dp"
        android:fontFamily="casual"
        android:paddingTop="15dp"
        android:text="@string/Conversion_Title"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDistance"

        android:layout_width="207dp"
        android:layout_height="63dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="102dp"
        android:backgroundTint="#000090FF"
        android:fontFamily="casual"
        android:shadowColor="#000000"
        android:text="@string/Conversion_Distance"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PageTitle" />

    <Button
        android:id="@+id/btnTemperature"
        android:layout_width="207dp"
        android:layout_height="63dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="102dp"
        android:backgroundTint="#000090FF"
        android:fontFamily="casual"
        android:shadowColor="#000000"
        android:text="@string/Conversion_Temperature"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTime" />

    <Button
        android:id="@+id/btnWeight"
        android:layout_width="207dp"
        android:layout_height="63dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="207dp"
        android:backgroundTint="#000090FF"
        android:fontFamily="casual"
        android:shadowColor="#000000"
        android:text="@string/Conversion_Weight"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnLogoutConversionPage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTemperature" />

    <Button
        android:id="@+id/btnTime"
        android:layout_width="207dp"
        android:layout_height="63dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="102dp"
        android:backgroundTint="#000090FF"
        android:fontFamily="casual"
        android:shadowColor="#000000"
        android:text="@string/Conversion_Time"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDistance" />

    <Button
        android:id="@+id/btnLogoutConversionPage"
        android:layout_width="115dp"
        android:layout_height="59dp"
        android:layout_marginStart="268dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#000090FF"
        android:fontFamily="casual"
        android:shadowColor="#000000"
        android:text="@string/Conversion_Options_Logout"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>