<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register"
    android:background="@drawable/img8">

    <EditText
        android:id="@+id/edUsernameRegister"
        android:layout_width="296dp"
        android:layout_height="39dp"
        android:layout_marginStart="69dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="47dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:foregroundTint="#FFFFFF"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUsernameRegister" />

    <EditText
        android:id="@+id/edPasswordRegister"
        android:layout_width="296dp"
        android:layout_height="39dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="47dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:foregroundTint="#FFFFFF"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPasswordRegister" />

    <EditText
        android:id="@+id/edConfirmPassword"
        android:layout_width="296dp"
        android:layout_height="39dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="47dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:foregroundTint="#FFFFFF"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtConfirmPasswordRegister" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="260dp"
        android:layout_height="52dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="83dp"
        android:layout_marginEnd="76dp"
        android:backgroundTint="#DFD2D2"

        android:buttonTint="#FFFFFF"
        android:fontFamily="casual"
        android:foregroundTint="#00AF2222"
        android:text="@string/Terms_accept"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:thumbTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edConfirmPassword" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="176dp"
        android:layout_height="42dp"
        android:layout_marginStart="117dp"
        android:layout_marginEnd="118dp"
        android:layout_marginBottom="22dp"
        android:backgroundTint="#2A918D8D"
        android:fontFamily="casual"
        android:text="@string/Register_Button"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="176dp"
        android:layout_height="42dp"
        android:layout_marginStart="117dp"
        android:layout_marginEnd="118dp"
        android:layout_marginBottom="66dp"
        android:backgroundTint="#2A918D8D"
        android:fontFamily="casual"
        android:text="@string/Login_Button"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtRegisterPageTitle"
        android:layout_width="395dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="#000090FF"
        android:fontFamily="casual"
        android:text="@string/Register_Title"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtUsernameRegister"
        android:layout_width="210dp"
        android:layout_height="27dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="133dp"
        android:fontFamily="casual"
        android:text="@string/Enter_Email"
        android:textAlignment="viewStart"
        android:textColor="#FFF9F9"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegisterPageTitle" />

    <TextView
        android:id="@+id/txtPasswordRegister"
        android:layout_width="210dp"
        android:layout_height="27dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="133dp"
        android:fontFamily="casual"
        android:text="@string/Enter_Password"
        android:textAlignment="viewStart"
        android:textColor="#FFF9F9"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edUsernameRegister" />

    <TextView
        android:id="@+id/txtConfirmPasswordRegister"
        android:layout_width="210dp"
        android:layout_height="27dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="133dp"
        android:fontFamily="casual"
        android:text="@string/Enter_Password_Confirmation"
        android:textAlignment="viewStart"
        android:textColor="#FFF9F9"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edPasswordRegister" />
</androidx.constraintlayout.widget.ConstraintLayout>