<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login"
    android:background="@drawable/img7">

    <TextView
        android:id="@+id/txtLoginPageTitle"
        android:layout_width="395dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="#000090FF"
        android:fontFamily="casual"
        android:text="@string/Login_Title"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="176dp"
        android:layout_height="42dp"
        android:layout_marginStart="117dp"
        android:layout_marginEnd="118dp"
        android:layout_marginBottom="22dp"
        android:backgroundTint="#2A918D8D"
        android:fontFamily="casual"
        android:text="@string/Login_Button"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnRegisterAccountLoginPage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edUsername"
        android:layout_width="296dp"
        android:layout_height="39dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="47dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:foregroundTint="#FFFFFF"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUsername" />

    <EditText
        android:id="@+id/edPassword"
        android:layout_width="296dp"
        android:layout_height="39dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="47dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:foregroundTint="#FFFFFF"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

    <Button
        android:id="@+id/btnRegisterAccountLoginPage"
        android:layout_width="176dp"
        android:layout_height="42dp"
        android:layout_marginStart="117dp"
        android:layout_marginEnd="118dp"
        android:layout_marginBottom="101dp"
        android:backgroundTint="#2A918D8D"
        android:fontFamily="casual"
        android:text="@string/Register_Button"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/txtUsername"
        android:layout_width="210dp"
        android:layout_height="27dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="133dp"
        android:fontFamily="casual"
        android:text="@string/Enter_Email"
        android:textAlignment="viewStart"
        android:textColor="#FFF9F9"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLoginPageTitle" />

    <TextView
        android:id="@+id/txtPassword"
        android:layout_width="210dp"
        android:layout_height="27dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="133dp"
        android:fontFamily="casual"
        android:text="@string/Enter_Password"
        android:textAlignment="viewStart"
        android:textColor="#FFF9F9"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edUsername" />

</androidx.constraintlayout.widget.ConstraintLayout>