<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".weight"
    android:background="@drawable/img14">

    <Button
        android:id="@+id/btnBackWeight"
        android:layout_width="107dp"
        android:layout_height="55dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="9dp"
        android:backgroundTint="#00958585"
        android:fontFamily="casual"
        android:text="@string/Back_Button"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/spnEndValueWeight"
        android:layout_width="91dp"
        android:layout_height="42dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="102dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnInitialValueWeight" />

    <EditText
        android:id="@+id/edEndValueWeight"
        android:layout_width="123dp"
        android:layout_height="37dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edInitialValueWeight" />

    <TextView
        android:id="@+id/WeightConversionTitle"
        android:layout_width="395dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"

        android:layout_marginEnd="8dp"
        android:background="#000090FF"
        android:fontFamily="casual"
        android:text="@string/Weight_Title"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edInitialValueWeight"
        android:layout_width="123dp"
        android:layout_height="37dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="98dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WeightConversionTitle" />

    <Spinner
        android:id="@+id/spnInitialValueWeight"
        android:layout_width="91dp"
        android:layout_height="42dp"
        android:layout_marginTop="98dp"
        android:layout_marginEnd="102dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WeightConversionTitle" />

    <Button
        android:id="@+id/btnCopyWeight"
        android:layout_width="107dp"
        android:layout_height="55dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="86dp"
        android:backgroundTint="#00958585"
        android:fontFamily="casual"
        android:text="@string/Copy_Button"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnEndValueWeight" />

    <Button
        android:id="@+id/btnConvertWeight"
        android:layout_width="107dp"
        android:layout_height="55dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="37dp"
        android:backgroundTint="#00958585"
        android:fontFamily="casual"
        android:text="@string/Convert_Button"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edEndValueWeight" />

</androidx.constraintlayout.widget.ConstraintLayout>